<resources>
    <string name="app_name">Conteam</string>

    <string name="informe_os_dados_abaixo_para_efetuar_o_seu_login">Informe os dados abaixo para efetuar o seu login</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="enviar">Enviar</string>
    <string name="questao_1">Apresentação do conteúdo</string>
    <string name="questao_2">Postura de apresentação, clareza e objetividade</string>
    <string name="questao_3">Metodologia</string>
    <string name="questao_4">Domínio do conteúdo apresentado</string>
    <string name="questao_5">Tempo de apresentação</string>
    <string name="apresentador">Apresentador(a):</string>
    <string name="title_activity_resumo">ResumoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Resumos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
